test/classes/ferguson/delete-free/owned-borrow-check.good
owned-borrow-check.chpl:9: In function 'bar':
owned-borrow-check.chpl:10: error: Scoped variable myGlobalC would outlive the value it is set to
owned-borrow-check.chpl:9: note: consider scope of arg
